Fix scrollbar in Search component.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+/* @layer base {
   html,
   body,
   #root {
@@ -25,5 +25,27 @@
 
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
+  }
+} */
+@layer utilities {
+  @media (max-width: 1023px) {
+    .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+    }
+    .scrollbar-hide {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  }
+
+  .scrollbar-default::-webkit-scrollbar {
+    width: 6px;
+  }
+  .scrollbar-default::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  .scrollbar-default::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 3px;
   }
 }
